tests/ui/proc-macro/quote/does-not-have-iter-interpolated.stderr
error: proc macro panicked
  --> $DIR/does-not-have-iter-interpolated.rs:16:5
   |
LL |     quote!($($nonrep)*);
   |     ^^^^^^^^^^^^^^^^^^^
   |
   = help: message: `$` must be followed by an ident or `$` in `quote!`

error: aborting due to 1 previous error

